# autonomousfleet-ai

./: .gitignore  CLAUDE.md  bot_testing_instructions.md
af_bringup/: package.xml  setup.cfg  setup.py
af_bringup/config/: camera_info.yaml  ekf.yaml  imu_filter.yaml  phase1_validation.rviz
af_bringup/launch/: explore.launch.py  lidar.launch.py  nav2.launch.py  robot.launch.py  slam.launch.py  teleop.launch.py
af_bringup/scripts/: nuke_devpc.sh  start_monitoring.sh  start_nlp.sh  start_pi.sh  start_robot.sh  stop_pi.sh
af_description/: package.xml  setup.cfg  setup.py
af_description/launch/: description.launch.py
af_description/urdf/: gazebo_plugins.xacro  mecanum.xacro  mentorpi.xacro  mentorpi_sim.xacro
af_hal/: package.xml  setup.cfg  setup.py
af_hal/af_hal/: hardware_watchdog_node.py  imu_calib_node.py  mecanum.py  odom_publisher_node.py  ros_robot_controller_node.py  ros_robot_controller_sdk.py  scan_sanitizer_node.py
af_hal/config/: servo_config.yaml
af_hal/launch/: af_hal.launch.py
af_mission_control/: package.xml  setup.cfg  setup.py
af_mission_control/af_mission_control/: find_object_action_node.py  mission_manager_node.py  safety_validator_node.py  simple_explore_node.py
af_monitoring/: package.xml  setup.cfg  setup.py
af_monitoring/af_monitoring/: detection_overlay_node.py  perf_monitor_node.py
af_monitoring/config/: full.rviz  navigation.rviz  perception.rviz  slam.rviz  swarm.rviz
af_monitoring/launch/: monitor.launch.py  record_session.launch.py  rviz.launch.py
af_msgs/: CMakeLists.txt  package.xml
af_msgs/action/: FindObject.action
af_msgs/msg/: DetectedObject.msg  FleetStatus.msg  FrontierClaim.msg  MissionCommand.msg  MissionStatus.msg  MotorsState.msg  ServosPosition.msg  SetBusServoState.msg  SetPWMServoState.msg
af_msgs/srv/: GetBusServoState.srv  GetPWMServoState.srv  ValidateCommand.srv
af_navigation/: package.xml  setup.cfg  setup.py
af_navigation/behavior_trees/: af_navigate_through_poses.xml  af_navigate_to_pose.xml
af_navigation/config/: nav2_params.yaml
af_navigation/launch/: navigation.launch.py
af_nlp/: package.xml  setup.cfg  setup.py
af_nlp/af_nlp/: cli.py  nlp_command_node.py
af_nlp/config/: rooms.yaml
af_nlp/launch/: nlp.launch.py
af_perception/: package.xml  setup.cfg  setup.py
af_perception/af_perception/: depth_estimator_node.py  image_decompressor_node.py  yolo_detector_node.py  yolo_onnx_node.py
af_perception/config/: perception.rviz  perception.yaml  perception_pi.yaml
af_perception/launch/: perception.launch.py  perception_pi.launch.py
af_perception/models/: README.md
af_perception/scripts/: export_onnx.sh
af_sim/: package.xml  setup.cfg  setup.py
af_sim/config/: nav2_mvsim_params.yaml  nav2_sim_params.yaml  slam_mvsim_params.yaml  slam_sim_params.yaml
af_sim/launch/: simulation.launch.py  simulation_full.launch.py  simulation_mvsim.launch.py  spawn_robot.launch.py
af_sim/worlds/: search_arena.world  search_arena_mvsim.world.xml
af_slam/: package.xml  setup.cfg  setup.py
af_slam/config/: amcl_params.yaml  mapper_params_online_async.yaml  slam.rviz
af_slam/launch/: slam_localization.launch.py  slam_mapping.launch.py
af_slam/maps/: room1.pgm  room1.yaml
af_slam/scripts/: save_map.sh
af_swarm/: package.xml  setup.cfg  setup.py
af_swarm/af_swarm/: batch_simulator_node.py  distributed_explore_node.py  flocking_node.py  ground_truth_detector_node.py  lightweight_agent_node.py  object_registry_node.py  swarm_coordinator_node.py
af_swarm/config/: swarm_params.yaml
af_swarm/launch/: explore_demo.launch.py  flocking_demo.launch.py
af_swarm/scripts/: flock_viz.py  run_explore_benchmark.py  run_flocking_benchmark.py
logs/ch5_experiments/: g12_session_2026-04-19.md  g5_bandwidth_raw.txt  g5_devpc_overlay_cpu.csv  g5_pi_cpu.csv  g5_pi_ps_snapshots.txt  g6_session_2026-04-19.md  g9_session_2026-04-19.md
logs/ch5_experiments/g11_drive_bag/: metadata.yaml
logs/ch5_experiments/g11_odom_bag/: metadata.yaml
logs/ch5_experiments/g3_perimeter_bag/: metadata.yaml
logs/module_g/: validation_session_2026-04-17.md
logs/phase1/: validation_session_2026-04-10.md
logs/phase2/: validation_session_2026-04-13.md
logs/phase3/: validation_session_2026-04-14.md
logs/phase4/: validation_session_2026-04-15.md
logs/phase5a/: validation_session_2026-04-16.md
logs/phase5b/: hw_test_log.jsonl  hw_test_log2.jsonl  manual_test.jsonl  nl_log.jsonl  nl_robot_test.jsonl  validation_session_2026-04-17.md
logs/phase6/benchmarks/: explore_benchmark.csv  flocking_benchmark.csv
logs/phase6/gazebo/: gazebo_attempt_log.md
logs/phase6/mvsim/: validation_session_2026-04-18.md
logs/phase7/: nl_log.jsonl  validation_session_2026-04-18.md
logs/phase8/: validation_session_2026-04-18.md
logs/phase8/g10/: trial1_n1.csv  trial1_n2.csv  trial1_n3.csv  trial1_n5.csv  trial2_n1.csv  trial2_n2.csv  trial2_n3.csv  trial2_n5.csv  trial3_n1.csv  trial3_n2.csv  trial3_n3.csv  trial3_n5.csv
setup/: instruction_1.md  instruction_2.md  instruction_3.md  instruction_4.md
