<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>af_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch composition for AutonomousFleet AI (HAL + sensors + EKF + description).</description>
  <maintainer email="nbstaha@gmail.com">Syed Taha Ali</maintainer>
  <license>MIT</license>

  <exec_depend>af_hal</exec_depend>
  <exec_depend>af_description</exec_depend>
  <exec_depend>af_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
