<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>af_description</name>
  <version>0.1.0</version>
  <description>URDF/xacro model and meshes for the MentorPi M1 (mecanum variant).</description>
  <maintainer email="nbstaha@gmail.com">Syed Taha Ali</maintainer>
  <license>MIT</license>

  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
