<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>af_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 configuration, behaviour tree, and launch composition for AutonomousFleet AI (holonomic mecanum path planning, DWB control, costmaps, recoveries).</description>
  <maintainer email="nbstaha@gmail.com">Syed Taha Ali</maintainer>
  <license>MIT</license>

  <exec_depend>af_slam</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>dwb_core</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
