<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>af_perception</name>
  <version>0.1.0</version>
  <description>
    AutonomousFleet AI perception pipeline. Two deployment targets share the
    same downstream interface (vision_msgs/Detection2DArray on /detections):
      * Phase 4 (Dev PC): yolo_detector_node runs Ultralytics PyTorch on CUDA
        and consumes a compressed camera stream over WiFi.
      * Phase 4.1 (on-robot): yolo_onnx_node runs ONNX Runtime on the Pi 5
        CPU against a local /camera/image_raw topic — raw frames never
        cross WiFi. Install onnxruntime in the container with
        `pip install --user onnxruntime`.
    depth_estimator_node back-projects detections onto the floor plane and
    publishes both /detected_objects_3d and an optional /vision_obstacles
    PointCloud2 for the Nav2 ObstacleLayer.
  </description>
  <maintainer email="nbstaha@gmail.com">Syed Taha Ali</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
