<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>af_sim</name>
  <version>0.1.0</version>
  <description>
    Simulation environments for the MentorPi M1. Provides MVSim multi-robot
    worlds with LiDAR, SLAM and Nav2 stacks, plus legacy Gazebo Classic 11
    launch files. Indoor arena world files and per-simulator config.
  </description>
  <maintainer email="nbstaha@gmail.com">Syed Taha Ali</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>af_description</depend>
  <depend>af_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
